2011-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fixed broken caching of values in hl during pointer assignment.

2011-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Do not allocate operands to hl when the code generator will use (hl) for the result in addition.

2011-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix for restoring of register iy when other register pairs are restored as well.

2011-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Fix peephole 76' so it doesn't overwrite accumulator during multibyte addition.

2011-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix for genPointerGet when result is lh.

2011-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix for addition with literal when right operand is partially in hl.

2011-03-29 Borut Razem <borut.razem AT gmail.com>

	* Partially merge from trunk

2011-03-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/z80.h,
	  src/z80/gen.c,
          src/z80/ralloc2.cc,
	  src/z80/peeph-z80.def:
	  Handle IY in the new allocator.

2011-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/ralloc.c,
	  src/z80/z80.h:
	  Preparations for handling IY in the new allocator.

2011-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/ralloc.c,
	  Fixes for the exact cost function.

2011-03-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lklex.c,
	* src/SDCCast.c: small fixes

2011-03-28 Borut Razem <borut.razem AT gmail.com>

	* src/z80/gen.c: fixed bug, introduced during code cleaning

2011-0-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCval.c,
	  src/SDCCval.h,
	  src/SDCC.y,
	  src/SDCCglue.c,
	  src/pic14/glue.c,
	  src/pic16/glue.c,
	  src/SDCCast.c: